--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==2.1.0
+absl-py==2.1.0
 annotated-types==0.7.0
 asgiref==3.8.1
 astunparse==1.6.3
@@ -8,22 +8,19 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpathlib==0.21.0
-cmake
 colorama==0.4.6
 confection==0.1.5
 cymem==2.0.11
 Django==5.1.6
 django-crispy-forms==2.3
 djangorestframework==3.15.2
-dlib
-face-recognition==1.3.0
-face-recognition-models==0.3.0
 flatbuffers==25.2.10
 gast==0.4.0
 google-auth==2.38.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.71.0
+gunicorn==22.0.0
 h5py==3.13.0
 idna==3.10
 Jinja2==3.1.6
@@ -65,8 +62,6 @@ shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
 termcolor==2.5.0
-django
-gunicorn
 tqdm==4.67.1
 typer==0.15.2
 typing_extensions==4.12.2
@@ -76,5 +71,3 @@ wasabi==1.1.3
 weasel==0.4.1
 Werkzeug==3.1.3
 wrapt==1.17.2
-django
-gunicorn
